# ros2_ws

./: .gitignore  frames_2025-03-30_15.52.41.gv  frames_2025-03-30_15.58.39.gv
install/: local_setup.sh  setup.sh
install/hello_package/lib/hello_package/: hello_node
install/hello_package/share/hello_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuka_urdf/lib/kuka_urdf/: hello_node  state_publisher
install/kuka_urdf/share/kuka_urdf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuka_urdf/share/kuka_urdf/launch/: demo_launch.py  launch.py
install/kuka_urdf/share/kuka_urdf/urdf/: kr210l150.urdf  kr210l150_remus.urdf  kr210l150_romulus.urdf  kuka.rviz
log/: latest_build
src/: requirements.txt
src/hello_package/: setup.cfg  setup.py
src/kuka_minus_cortex/: CMakeLists.txt  README.md  package.xml
src/kuka_minus_cortex/config/: gamepad.yaml
src/kuka_minus_cortex/launch/: display.launch.py
src/kuka_minus_cortex/urdf/: kuka_cortex.urdf  kuka_minus.urdf
src/kuka_urdf/: package.xml  setup.cfg  setup.py
src/kuka_urdf/kuka_urdf/: command_line_state_publisher.py  gamepad.py  joint_state_listener.py  joints_publisher.py  state_publisher.py
src/kuka_urdf/launch/: launch.py
src/kuka_urdf/urdf/: kr210l150_remus.urdf  kr210l150_romulus.urdf  kuka.rviz
